# anagram_solver

./: Cargo.toml  README.md  pyproject.toml
src/: lib.rs  main.rs
